% fixed button rendering issue in IE, it did not uppercase letters in the 'small' skin on shift and caps lock press
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@506 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/css/small/keyboard.css
+++ b/css/small/keyboard.css
@@ -79,7 +79,10 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
 }
 #virtualKeyboard #kbDesk div.kbButton span.shifted,
 #virtualKeyboard #kbDesk div.kbButton span.alted {
-        display: none;
+        position: absolute;
+        right: -5px;
+        top: 0;
+        visibility: hidden;
 }
 #virtualKeyboard #kbDesk span.deadKey {
         color: red;
